--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,25 +1,34 @@
-/* .App {
-  text-align: center;
-} */
-/* a.activeClass {
-  padding: 10px;
-} */
+.mainContainer {
+  margin: 6em auto !important;
+}
+
+#heroSection {
+  margin: 40vh auto !important;
+}
+
+.hpSection {
+  margin: 8em auto;
+}
+
 .activeClass,
 .activeClass:hover {
   color: rgb(3, 102, 36);
   text-decoration: underline;
 }
+
 .nonActive {
   text-decoration: none;
   color: black;
   opacity: 0.6;
 }
+
 .nonActive:hover {
   background-color: rgb(164, 219, 164);
   color: black;
   opacity: 1;
   border-radius: 5px;
 }
+
 .card-events-list {
   list-style: none;
   padding: 0;
