--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+
 html,
 body,
 div,
@@ -84,6 +86,7 @@ video {
   border: 0;
   font-size: 100%;
   font: inherit;
+  font-family: 'Ubuntu', sans-serif;
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
