--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 .mainContainer {
   margin: 6em auto !important;
+  min-height: 72vh;
 }
 
 #heroSection,
@@ -46,13 +47,32 @@ color: rgba(128, 128, 128, 0.434);
 }
 
 .signupCard {
-   width: 45vw;
+   width: 30vw;
    margin: auto;
 }
 
-@media (max-width: 700px) {
-  .signupCard {
-    width: 95vw;
+.signupForm {
+  margin: 3em 5em;
+}
+
+@media (max-width: 1300px) {
+  .signupForm {
+    margin: 2em 1em;
+  }
+}
+
+@media (max-width: 1000px) {
+    .signupCard {
+    width: 70vw;
     margin: auto;
  }
+  .signupForm {
+    margin: 2em 1em;
+  }
 }
+
+/* .footer {
+  position: sticky;
+  bottom: 0;
+  width: 100%;
+} */
