--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -10883,6 +10883,30 @@ body {
   margin: 3em 5em;
 }
 
+.categoriesDiv {
+  margin: auto 10em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  row-gap: 5em;
+  -moz-column-gap: 7em;
+       column-gap: 7em;
+}
+.categoriesDiv .card {
+  flex: 40%;
+}
+.categoriesDiv .card .text-end {
+  margin-top: 1em;
+  font-size: smaller;
+}
+.categoriesDiv .card img {
+  max-height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  aspect-ratio: 1;
+}
+
 @media (max-width: 1300px) {
   .signupForm {
     margin: 2em 1em;
@@ -10895,5 +10919,8 @@ body {
   }
   .signupForm {
     margin: 2em 1em;
+  }
+  .categoriesDiv {
+    margin: auto 2em;
   }
 }/*# sourceMappingURL=styles.css.map */
