--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -5,25 +5,34 @@ body {
   font-family: "Ubuntu", sans-serif;
 }
 
+// general styling -->
 .App {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   .mainContainer {
-    margin: 6em auto !important;
+    margin: 8em auto !important;
     flex-grow: 1;
   }
 }
+// <-- general styling
 
+// homepage styling -->
 #heroSection,
 #construction {
   margin: 30vh auto !important;
+}
+
+.showMoreP:hover {
+  cursor: pointer;
+  color: rgba(128, 128, 128, 0.434);
 }
 
 .hpSection {
   margin: 8em auto;
 }
 
+//categoriesOverview styles -->
 .activeClass,
 .activeClass:hover {
   background-color: $secondary;
@@ -49,12 +58,10 @@ body {
   list-style: none;
   padding: 0;
 }
+// <-- categoriesOverview styles
+// <-- homepage styling
 
-.showMoreP:hover {
-  cursor: pointer;
-  color: rgba(128, 128, 128, 0.434);
-}
-
+//signup page styling -->
 .signupCard {
   width: 30vw;
   margin: auto;
@@ -63,9 +70,11 @@ body {
 .signupForm {
   margin: 3em 5em;
 }
+// <-- signup page styling
 
+// categories page styling -->
 .categoriesHeader {
-  margin-bottom: 6em;
+  margin-bottom: 4em;
   p {
     font-size: smaller;
     margin: 0.5em auto;
@@ -84,7 +93,7 @@ body {
   row-gap: 5em;
   column-gap: 5em;
   .card {
-    flex: 33%;
+    flex: 40%;
     .text-end {
       margin-top: 1em;
       font-size: smaller;
@@ -100,14 +109,16 @@ body {
     }
   }
 }
+// <-- categories page styling
 
+// media queries -->
 @media (max-width: 1300px) {
   .signupForm {
     margin: 2em 1em;
   }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 980px) {
   .signupCard {
     width: 70vw;
     margin: auto;
@@ -121,3 +132,4 @@ body {
     column-gap: 7em;
   }
 }
+// <-- media queries
