--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -10834,6 +10834,14 @@ body {
   flex-grow: 1;
 }
 
+.spinner {
+  margin: 25vh auto;
+  display: flex;
+  gap: 1em;
+  flex-direction: row;
+  justify-content: center;
+}
+
 #heroSection,
 #construction {
   margin: 30vh auto !important;
