styling of list of events

--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -10903,6 +10903,16 @@ body {
 .App .layoutContainer .eventsDiv .eventsFilters #createNew {
   margin-left: auto;
 }
+.App .layoutContainer .eventsDiv .eventsList li {
+  margin: 0.5em auto;
+}
+.App .layoutContainer .eventsDiv .eventsList li > * {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+.App .layoutContainer .eventsDiv .eventsList li:hover {
+  background-color: #f8f9fa;
+}
 .App .activeClass,
 .App .activeClass:hover {
   background-color: #6c757d;
