categories overview @ homepage

--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -10856,6 +10856,9 @@ body {
 .App .layoutContainer .hpSection .card-events-list {
   padding: 0;
 }
+.App .layoutContainer .hpSection .carouselCaption {
+  background-color: rgba(128, 128, 128, 0.763);
+}
 .App .layoutContainer .subpageHeader {
   margin-bottom: 4em;
 }
