--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -43,6 +43,9 @@ body {
       .card-events-list {
         padding: 0;
       }
+      .carouselCaption {
+        background-color: rgba(128, 128, 128, 0.763);
+      }
     }
     // // <<-- homepage styling
     .subpageHeader {
