newest main version

--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -148,8 +148,8 @@ body {
 // // <-- signup page styling
 
 // // <-- media queries
-@media only screen and (max-width: 998px) {
-  .teamIntro {
-    gap: 2em;
-  }
+// @media only screen and (max-width: 1000px) {
+//   .teamIntro {
+//     gap: 2em;
+//   }
 }
