signup form styling cleaned up and put in one file

--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -10942,14 +10942,43 @@ body {
   opacity: 1;
   border-radius: 5px;
 }
-
-.signupCard {
-  width: 30vw;
+.App .signUpCards {
+  max-width: 50vh;
   margin: auto;
 }
-
-.signupForm {
-  margin: 3em 5em;
+.App .signUpCards .signUpHere {
+  color: inherit;
+}
+.App .signUpCards .offscreen {
+  position: absolute;
+  left: -9999px;
+}
+.App .signUpCards .errmsg {
+  background-color: lightpink;
+  color: firebrick;
+  font-weight: bold;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.App .signUpCards .instructions {
+  font-size: 0.75rem;
+  border-radius: 0.5rem;
+  background: #6c757d;
+  color: #fff;
+  padding: 0.25rem;
+  position: relative;
+  bottom: -10px;
+}
+.App .signUpCards .hide {
+  display: none;
+}
+.App .signUpCards .valid {
+  color: limegreen;
+  margin-left: 0.25rem;
+}
+.App .signUpCards .invalid {
+  color: red;
+  margin-left: 0.25rem;
 }
 
 @media (max-width: 770px) {
