--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -10943,7 +10943,7 @@ body {
   border-radius: 5px;
 }
 .App .signUpCards {
-  max-width: 50vh;
+  max-width: 30em;
   margin: auto;
 }
 .App .signUpCards .signUpHere {
@@ -10979,6 +10979,19 @@ body {
 .App .signUpCards .invalid {
   color: red;
   margin-left: 0.25rem;
+}
+.App .createEvent {
+  margin: auto;
+  max-width: 50em;
+}
+.App .createEvent .createEventForm {
+  margin: 3em auto;
+  max-width: 45em;
+}
+.App .createEvent .createEventForm .radioButtons {
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
 }
 
 @media (max-width: 770px) {
