--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -10998,6 +10998,22 @@ body {
   flex-flow: row wrap;
   gap: 3em;
   justify-content: space-evenly;
+  align-items: flex-start;
+}
+.App .userProfileDiv #userDesc {
+  width: 20em;
+}
+.App .userProfileDiv #userDesc img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  margin: auto;
+  margin-top: 2em;
+}
+.App .userProfileDiv #userEvents {
+  width: 50em;
 }
 
 @media (max-width: 770px) {
