--- a/frontend/src/components/EventPages/event.css
+++ b/frontend/src/components/EventPages/event.css
@@ -68,10 +68,25 @@
 
 .subtitle {
     font-size: 1.3rem;
+    color:gray;
+    padding-bottom: 0.5rem;
+}
+
+.subtitle2 {
+    font-size: 1.2rem;
     padding-bottom: 0.5rem;
 }
 
 .btn_event {
     display: flex;
     justify-content: space-between;
+}
+
+.category_event {
+    display: flex;
+    justify-content: end;
+    margin-top: 1rem;
+    padding-top: 0.7rem;
+    padding-right: 0rem;
+
 }
